--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,4 +12,4 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag jetbrains-devcontainer-clients:${GITHUB_REF#refs/tags/}
+      run: docker build . --file Containerfile --tag jetbrains-devcontainer-clients:${GITHUB_REF#refs/tags/}
