--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,14 +2,22 @@ name: Docker Image CI
 
 on:
   push:
-    tags: 
-    - "*"  # Matches all tags (e.g., v1.0.0, release-2025, etc.)
+    tags:
+      - "*"  # Runs on all tags
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout the code
+      uses: actions/checkout@v4
+
+    - name: Log in to Docker Hub
+      run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+
     - name: Build the Docker image
-      run: docker build . --file Containerfile --tag jetbrains-devcontainer-clients:${GITHUB_REF#refs/tags/}
+      run: docker build . --file Containerfile --tag deedss/jetbrains-devcontainer-clients:${GITHUB_REF#refs/tags/}
+
+    - name: Push the Docker image to Docker Hub
+      run: docker push deedss/jetbrains-devcontainer-clients:${GITHUB_REF#refs/tags/}
